v0.0.9 (21 Jan 2014)
  Added DNS address resolution in the client and automatic UDP socket type
    creation (ipv4 or ipv6).
  Renamed "hostname" option to "host".

v0.0.8 (21 Jan 2014)
  Allow aborting a request without calling the default request listener.
  Minor internal refactor.

v0.0.7 (20 Jan 2014)
  Bump version.

v0.0.6 (20 Jan 2014)
  Server implemented along with a major refactor of the client.
  Fixed the reception of user extensions sent by the server.
  Added the server setup in the cli script.
  Changed the sockets of the stats object.
  Minor tweaks, checks and bugfixes.

v0.0.5 (16 Jan 2014)
  An error message can be passed to "abort()". This is an informative message
    that is sent to the server.
  Minor bugfixes.

v0.0.4 (13 Jan 2014)
  Added "highWaterMark" option to "get()", "put()", "createGetStream()" and
    "createPutStream()".

v0.0.3 (11 Jan 2014)
  If the server sends unknown extensions now the client fails correctly.
  The "userExtensions" property has been moved from "createClient()" to "get()",
    "put()", "createGetStream()" and "createPutStream()".
  Fixed error while retransmitting a bad request.
  Properly check if the file is too big to be sent.
  Minor improvements.

v0.0.2 (06 Jan 2014)
  Fixed error with the sums.
  Don't wait to the callback after sending a packet.
  The reader and the writer inherites from the request instead of using events.
  Speed improvement (~25% faster).

v0.0.1 (05 Jan 2014)
  First release.