@@ -13,7 +13,7 @@ var IncomingRequest = module.exports = function (args){
   
   this._isRRQ = !args.reader;
   var family = args.helper._rinfo.family;
-  this._ipFamily = parseInt (family[family.length - 1]);
+  this._ipFamily = args.family;
   this._globalOptions = args.globalOptions;
   this._maxDataLength = 4;
   this._file = args.message.file;
