@@ -38,6 +38,7 @@ var Server = module.exports = function (options, listener){
   if (!family) throw new Error ("Invalid IP address (domain names are not " +
       "allowed)");
   this._host = address;
+  this._family = family;
   
   var me = this;
   this._socket = dgram.createSocket ("udp" + family)
@@ -92,8 +93,14 @@ var Server = module.exports = function (options, listener){
             gs.method = "PUT";
             gs.file = file;
             
+            var ps = new PutStream ();
+            //The put stream needs to call the get stream to pass the user
+            //extensions when it's a WRQ
+            ps._gs = gs;
+            ps._isWRQ = true;
+            
             //Call the request listener
-            me.emit ("request", gs, new PutStream ());
+            me.emit ("request", gs, ps);
           });
         }else{
           return helper.sendErrorAndClose (errors.EBADOP);
