@@ -16,6 +16,7 @@ var GetStream = module.exports = function (server, helper, message,
   
   this._ps = null;
   this._aborted = false;
+  this._userExtensions = null;
   
   //Validate the request
   try{
@@ -77,9 +78,11 @@ GetStream.prototype.abort = function (error){
 GetStream.prototype._createReader = function (){
   var me = this;
   this._reader = new Reader ({
+    family: this._family,
     helper: this._helper,
     message: this._message,
     globalOptions: this._globalOptions,
+    userExtensions: this._userExtensions
   });
   
   //Free the request message
