@@ -15,6 +15,7 @@ var PutStream = module.exports = function (server, helper, message,
   //WRQ
   if (!helper) return;
   
+  this._isWRQ = false;
   this._finished = false;
   this._writer = null;
   this._size = null;
@@ -105,6 +106,7 @@ PutStream.prototype._abort = function (error){
 PutStream.prototype._createWriter = function (cb){
   var me = this;
   this._writer = new Writer ({
+    family: this._family,
     helper: this._helper,
     message: this._message,
     globalOptions: this._globalOptions,
@@ -145,11 +147,21 @@ PutStream.prototype._write = function (chunk, encoding, cb){
 };
 
 PutStream.prototype.setUserExtensions = function (userExtensions){
-  if (this._writer){
-    //The extensions are set from inside the stats event listener
-    this._writer._responseUserExtensions = userExtensions;
+  if (this._isWRQ){
+    if (this._gs._reader){
+      //The extensions are set from inside the stats event listener
+      this._gs._reader._responseUserExtensions = userExtensions;
+    }else{
+      //The extensions are set before the stats event emission
+      this._gs._userExtensions = userExtensions;
+    }
   }else{
-    //The extensions are set before the stats event emission
-    this._userExtensions = userExtensions;
+    if (this._writer){
+      //The extensions are set from inside the stats event listener
+      this._writer._responseUserExtensions = userExtensions;
+    }else{
+      //The extensions are set before the stats event emission
+      this._userExtensions = userExtensions;
+    }
   }
 };
