@@ -2,6 +2,7 @@ v0.0.9 (21 Jan 2014)
   Added DNS address resolution in the client and automatic UDP socket type
     creation (ipv4 or ipv6).
   Renamed "hostname" option to "host".
+  When the request is a PUT operation now "setUserExtensions()" works correctly.
 
 v0.0.8 (21 Jan 2014)
   Allow aborting a request without calling the default request listener.
